Färdig med hemuppgifter för idag!

--- a/exercises/Exercise_01.ipynb
+++ b/exercises/Exercise_01.ipynb
@@ -190,8 +190,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "36a080f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your text has 16 characters.\n",
+      "You wrote: what an exercise\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 5 Count the characters in a text\n",
+    "\n",
+    "# Ask the user to enter some text\n",
+    "user_text = input(\"Enter your text: \")\n",
+    "\n",
+    "# Count the number of characters (including spaces)\n",
+    "character_count = len(user_text)\n",
+    "\n",
+    "# Show the result\n",
+    "print(f\"Your text has {character_count} characters.\")\n",
+    "print(\"You wrote:\", user_text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "dd1465f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "radius = 5 has type <class 'int'>\n",
+      "PI = 3.1415 has type <class 'float'>\n",
+      "cool_subject = 'math' has type <class 'str'>\n",
+      "is_cool = True has type <class 'bool'>\n",
+      "numbers = [1, 2, 41, 2] has type <class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 6 Data types\n",
+    "\n",
+    "# 🧪 Create variables of different types\n",
+    "radius = 5                      # int\n",
+    "PI = 3.1415                     # float\n",
+    "cool_subject = 'math'          # str\n",
+    "is_cool = True                 # bool\n",
+    "numbers = [1, 2, 41, 2]        # list\n",
+    "\n",
+    "# 🔍 Check and print their types\n",
+    "print(f\"radius = {radius} has type {type(radius)}\")\n",
+    "print(f\"PI = {PI} has type {type(PI)}\")\n",
+    "print(f\"cool_subject = '{cool_subject}' has type {type(cool_subject)}\")\n",
+    "print(f\"is_cool = {is_cool} has type {type(is_cool)}\")\n",
+    "print(f\"numbers = {numbers} has type {type(numbers)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "641fc6ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Christoffer!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 7 Theory\n",
+    "\n",
+    "#Exercise A What is the difference between input() and print()?\n",
+    "#input() lets the user type something into the program.\n",
+    "\n",
+    "#print() shows something on the screen.\n",
+    "\n",
+    "name = input(\"What's your name?\")  # User types their name\n",
+    "print(f\"Hello, {name}!\")           # Program prints a greeting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "650f5c6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are 37 years old and 1.82 cm tall.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercise B What type of data does input() return?\n",
+    "\n",
+    "#By default, input() returns a string (str), even if the user types a number.\n",
+    "\n",
+    "#To get numeric input:\n",
+    "\n",
+    "age = int(input(\"Enter your age: \"))     # Converts to integer\n",
+    "height = float(input(\"Enter height in m: \"))  # Converts to float\n",
+    "print(f\"You are {age} years old and {height} cm tall.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6e48768f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice scored 95 points!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercise C Why should you use f-strings (formatted strings)?\n",
+    "\n",
+    "# F-strings provide a concise and readable way to embed expressions inside string literals,\n",
+    "# making it easier to format and display dynamic content.\n",
+    "\n",
+    "name = \"Alice\"\n",
+    "score = 95\n",
+    "print(f\"{name} scored {score} points!\")  # Easy to read and write\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "96479045",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is now: [10, 'ten'] with type <class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise D Can a variable change its type after it has been created?\n",
+    "\n",
+    "# Yes, in Python, a variable can change its type after it has been created.\n",
+    "# Python is a dynamically typed language, which means that the type of a variable is determined at\n",
+    "# runtime based on the value assigned to it. You can reassign a variable to a value of a different type.\n",
+    "\n",
+    "x = 10          # x is an int\n",
+    "x = \"ten\"       # now x is a str\n",
+    "x = [10, \"ten\"] # now x is a list\n",
+    "print(f\"x is now: {x} with type {type(x)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b937624b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is now: five with type <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercise E What Does \"Dynamically Typed\" Mean?\n",
+    "\n",
+    "# In a dynamically typed language like Python, the type of a variable is determined at runtime based on \n",
+    "# the value assigned to it.\n",
+    "\n",
+    "# This means you don't have to declare the type of a variable when you create it, and you can change\n",
+    "# the type by assigning a value of a different type to the same variable.\n",
+    "\n",
+    "x = 5       # Python knows x is an int\n",
+    "x = \"five\"  # Now x is a str — no error!\n",
+    "print(f\"x is now: {x} with type {type(x)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f59306a1",
    "metadata": {},
    "outputs": [],
    "source": []
