Noteringar. Behöver starta om pga pyth 3.12

--- a/Notes_from_class/Python_notes_from_class.ipynb
+++ b/Notes_from_class/Python_notes_from_class.ipynb
@@ -9,6 +9,17 @@
    "source": [
     "\"\"\"\n",
     "Python - pipeline - data load - data transform - dapster python - dbt pyspark - \n",
+    "\n",
+    "High level language = easy to read, write, maintain\n",
+    "\n",
+    "Automation - web scraping - machine learning - data analysis - web development\n",
+    "\n",
+    "Pandas - numpy - matplotlib - seaborn - scikit-learn - tensorflow - keras - flask - django\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\"\"\""
    ]
   }
