--- a/exercises/Exercise_01.ipynb
+++ b/exercises/Exercise_01.ipynb
@@ -23,15 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "5b132b5c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The hypotenuse is: 5.0\n"
+     "ename": "NameError",
+     "evalue": "name 'math' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m a = \u001b[32m3\u001b[39m\n\u001b[32m      5\u001b[39m b = \u001b[32m4\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m c = \u001b[43mmath\u001b[49m.sqrt(a**\u001b[32m2\u001b[39m + b**\u001b[32m2\u001b[39m)\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mThe hypotenuse is:\u001b[39m\u001b[33m\"\u001b[39m, c)\n",
+      "\u001b[31mNameError\u001b[39m: name 'math' is not defined"
      ]
     }
    ],
@@ -47,15 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "8fdcbd50",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The other leg b is: 4.9\n"
+     "ename": "NameError",
+     "evalue": "name 'math' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m c = \u001b[32m7\u001b[39m\n\u001b[32m      5\u001b[39m a = \u001b[32m5\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m b = \u001b[43mmath\u001b[49m.sqrt(c**\u001b[32m2\u001b[39m - a**\u001b[32m2\u001b[39m)\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# round to one decimal\u001b[39;00m\n\u001b[32m      9\u001b[39m b_rounded = \u001b[38;5;28mround\u001b[39m(b, \u001b[32m1\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'math' is not defined"
      ]
     }
    ],
@@ -410,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
