nu fungerar det efter ändrad python version

--- a/exercises/Exercise_01.ipynb
+++ b/exercises/Exercise_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4cbdee97",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "278a47b2",
    "metadata": {},
    "outputs": [],
@@ -23,19 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5b132b5c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'math' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m a = \u001b[32m3\u001b[39m\n\u001b[32m      5\u001b[39m b = \u001b[32m4\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m c = \u001b[43mmath\u001b[49m.sqrt(a**\u001b[32m2\u001b[39m + b**\u001b[32m2\u001b[39m)\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mThe hypotenuse is:\u001b[39m\u001b[33m\"\u001b[39m, c)\n",
-      "\u001b[31mNameError\u001b[39m: name 'math' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The hypotenuse is: 5.0\n"
      ]
     }
    ],
@@ -51,19 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "8fdcbd50",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'math' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m c = \u001b[32m7\u001b[39m\n\u001b[32m      5\u001b[39m a = \u001b[32m5\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m b = \u001b[43mmath\u001b[49m.sqrt(c**\u001b[32m2\u001b[39m - a**\u001b[32m2\u001b[39m)\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# round to one decimal\u001b[39;00m\n\u001b[32m      9\u001b[39m b_rounded = \u001b[38;5;28mround\u001b[39m(b, \u001b[32m1\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'math' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The other leg b is: 4.9\n"
      ]
     }
    ],
@@ -83,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a3a4e5b0",
    "metadata": {},
    "outputs": [],
@@ -93,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "20c6447d",
    "metadata": {},
    "outputs": [
@@ -121,10 +113,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b740c6e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nConclusion: The model has an accuracy of 98.7%, which indicates it performs well in distinguishing \\nbetween fire and non-fire instances.\\nHowever, the presence of false negatives (11 cases) suggests that the model may miss some fire events, \\nwhich could be critical in real-world applications. Further improvements may be needed to reduce false \\nnegatives while maintaining high accuracy.\\n'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Conclusion: The model has an accuracy of 98.7%, which indicates it performs well in distinguishing \n",
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "b9eb07fc",
    "metadata": {},
    "outputs": [
@@ -367,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "b937624b",
    "metadata": {},
    "outputs": [
