--- a/exercises/Exercise_02.ipynb
+++ b/exercises/Exercise_02.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "5893f129",
    "metadata": {},
    "outputs": [
@@ -44,6 +44,7 @@
     }
    ],
    "source": [
+    "#Exercise 0 even - odd or zero.\n",
     "number = int(input(\"Insert you number\"))\n",
     "\n",
     "if number == 0:\n",
@@ -85,11 +86,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "7861b072",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 is larger than 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercise 1 - Smaller, larger or equal\n",
+    "num1 = int(input(\"insert first number: \"))\n",
+    "num2 = int(input(\"insert second number: \"))\n",
+    "if num1 < num2:\n",
+    "    print(f\"{num1} is smaller than {num2}\")\n",
+    "elif num1 > num2:\n",
+    "    print(f\"{num1} is larger than {num2}\")\n",
+    "else:\n",
+    "    print(f\"{num1} is equal to {num2}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0b661aa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 is larger than 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Samma lösning fast från chatGPT\n",
+    "\n",
+    "num1 = int(input(\"Insert first number: \"))\n",
+    "num2 = int(input(\"Insert second number: \"))\n",
+    "\n",
+    "if num1 < num2:\n",
+    "    comparison = \"smaller than\"\n",
+    "elif num1 > num2:\n",
+    "    comparison = \"larger than\"\n",
+    "else:\n",
+    "    comparison = \"equal to\"\n",
+    "\n",
+    "print(f\"{num1} is {comparison} {num2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b126807c",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Exercise 2 "
+   ]
   }
  ],
  "metadata": {
