--- a/code_alongs/04_input_output/input_output.ipynb
+++ b/code_alongs/04_input_output/input_output.ipynb
@@ -85,8 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dd523029",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test comment git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78fd504a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -94,7 +104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_christoffer_carlsson_DE25",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -108,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
