nu aktiverat autospar på desktop

--- a/code_alongs/04_input_output/input_output.ipynb
+++ b/code_alongs/04_input_output/input_output.ipynb
@@ -95,8 +95,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "78fd504a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a new line added for testing.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"This is a new line added for testing.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d83c3724",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -104,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python_christoffer_carlsson_DE25 (3.12.10)",
    "language": "python",
    "name": "python3"
   },
