gruppuppgift if statement

--- a/code_alongs/05_if_statements/if_statements.ipynb
+++ b/code_alongs/05_if_statements/if_statements.ipynb
@@ -192,16 +192,49 @@
    "id": "99fcf415",
    "metadata": {},
    "source": [
-    "#### Group assignment"
+    "#### Group exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9b9c0afb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Priset för dig som är arbetande är 100 kr.\n"
+     ]
+    }
+   ],
+   "source": [
+    "price_of_apple = 10\n",
+    "customer = input(\"Det finns rabatt för studenter och pensionärer. Fyll i din status: \")\n",
+    "number_of_apples = int(input(\"Hur många äpplen vill du köpa? \"))\n",
+    "total_price = price_of_apple * number_of_apples\n",
+    "\n",
+    "# student gets 30% discount and pensioners 50% discount\n",
+    "if customer == \"student\":\n",
+    "    price_of_apple = price_of_apple * 0.7\n",
+    "elif customer == \"pensionär\":\n",
+    "    price_of_apple = price_of_apple * 0.5\n",
+    "else:\n",
+    "    price_of_apple = price_of_apple * 1\n",
+    "total_price = price_of_apple * number_of_apples\n",
+    "print(f\"Priset för dig som är {customer} är {total_price} kr.\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b9c0afb",
+   "id": "c1226a95",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
