--- a/code_alongs/04_input_output/input_output.ipynb
+++ b/code_alongs/04_input_output/input_output.ipynb
@@ -122,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_christoffer_carlsson_DE25 (3.12.10)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
