--- a/code_alongs/05_if_statements/if_statements.ipynb
+++ b/code_alongs/05_if_statements/if_statements.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "9b9c0afb",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Priset för dig som är arbetande är 100 kr.\n"
+      "Priset för 10 äpplen för dig som är student är 70.0 kr.\n"
      ]
     }
    ],
@@ -223,17 +223,7 @@
     "else:\n",
     "    price_of_apple = price_of_apple * 1\n",
     "total_price = price_of_apple * number_of_apples\n",
-    "print(f\"Priset för dig som är {customer} är {total_price} kr.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1226a95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
+    "print(f\"Priset för {number_of_apples} äpplen för dig som är {customer} är {total_price} kr.\")\n"
    ]
   }
  ],
