färdig med uppgiften med fåglar

--- a/code_alongs/05_control_structures/while_statements.ipynb
+++ b/code_alongs/05_control_structures/while_statements.ipynb
@@ -38,9 +38,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc53a90d",
+   "metadata": {},
+   "source": [
+    "##### example of oil leakage\n",
+    "- in year 0, for beginning, we have 80 000 birds\n",
+    "- due to oil leakage, 50% of birds will die every year (note that the nr of dead birds is not an absolute number)\n",
+    "- when will the number of birds becom 8000?\n",
+    "- in this example, we don't know about how many years need to be repeated to reach this number (8000 birds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0bd29448",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It takes 4 years for the number of birds to be less than 8000.\n"
+     ]
+    }
+   ],
+   "source": [
+    "birds = 80000\n",
+    "year = 0\n",
+    "while birds > 8000:\n",
+    "    birds = birds * 0.5\n",
+    "    year += 1\n",
+    "print(f\"It takes {year} years for the number of birds to be less than 8000.\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc53a90d",
+   "id": "7f9704f4",
    "metadata": {},
    "outputs": [],
    "source": []
