lagt till kommentarer

--- a/code_alongs/05_control_structures/while_statements.ipynb
+++ b/code_alongs/05_control_structures/while_statements.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0bd29448",
    "metadata": {},
    "outputs": [
@@ -66,9 +66,9 @@
    "source": [
     "birds = 80000\n",
     "year = 0\n",
-    "while birds > 8000:\n",
-    "    birds = birds * 0.5\n",
-    "    year += 1\n",
+    "while birds > 8000: # provide a condition to exit the loop\n",
+    "    birds = birds * 0.5 # halve the number of birds\n",
+    "    year += 1 # increment the year counter\n",
     "print(f\"It takes {year} years for the number of birds to be less than 8000.\")\n"
    ]
   },
