tillägg while infinite loop with break statement

--- a/code_alongs/05_control_structures/while_statements.ipynb
+++ b/code_alongs/05_control_structures/while_statements.ipynb
@@ -73,9 +73,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7f9704f4",
+   "metadata": {},
+   "source": [
+    "##### Infinate While loop and break statement\n",
+    "- the special thing with the infinite loop is that the condition is alwas True\n",
+    "- loop thorugh the same block of codes for several times\n",
+    "- number of looping is not known when starting a while loop\n",
+    "- instead if having the condition at the beginning of the while loop, the condition is still here, but it is evaluated within the block of code that we want to repeat\n",
+    "- the motivation/use case: wether the condition is met will be decided during iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "003cabd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "\n",
+    "while True:\n",
+    "    print(i)\n",
+    "    i += 1\n",
+    "\n",
+    "    if i >= 5: # provide a condition to exit the loop\n",
+    "        break\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f9704f4",
+   "id": "7e0bcc2c",
    "metadata": {},
    "outputs": [],
    "source": []
