--- a/code_alongs/05_control_structures/for_statements.ipynb
+++ b/code_alongs/05_control_structures/for_statements.ipynb
@@ -140,12 +140,51 @@
    "cell_type": "markdown",
    "id": "37ca529d",
    "metadata": {},
+   "source": [
+    "##### Un-pythonic codes\n",
+    "- Rewrite the code without enumerate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "aa67762f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite fruits are:\n",
+      "1. apple\n",
+      "2. orange\n",
+      "3. grape\n",
+      "4. strawberry\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"orange\", \"grape\", \"strawberry\"]\n",
+    "\n",
+    "print(\"My favorite fruits are:\")\n",
+    "index = 1  # Starta från 1\n",
+    "for fruit in fruits:\n",
+    "    print(f\"{index}. {fruit}\")\n",
+    "    index += 1  # Öka index med 1 varje gång\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "880d3191",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python_christoffer_carlsson_DE25 (3.12.10)",
    "language": "python",
    "name": "python3"
   },
