uppdaterat efter klass

--- a/code_alongs/05_control_structures/for_statements.ipynb
+++ b/code_alongs/05_control_structures/for_statements.ipynb
@@ -121,11 +121,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "121f610f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random as rnd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fbc3f274",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# generate a dice result from a throw\n",
+    "# also work on the dice exercise to practice the use of random module\n",
+    "dice_result = rnd.randint(1, 6) # ise the alias. when you want to use a function from the module\n",
+    "dice_result"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "42113c71",
    "metadata": {},
    "source": [
     "##### loop through a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7ef77116",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love to eat apple\n",
+      "I love to eat orange\n",
+      "I love to eat grape\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list is a collection of items/values/data\n",
+    "fruits = [\"apple\", \"orange\", \"grape\"]\n",
+    "\n",
+    "for fruit in fruits:\n",
+    "    print(f\"I love to eat {fruit}\")"
    ]
   },
   {
