börja med den svåra Monte Carlo Simulation

--- a/exercises/Exercise_03.ipynb
+++ b/exercises/Exercise_03.ipynb
@@ -103,12 +103,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "4604efae",
    "metadata": {},
+   "source": [
+    "##### Monte Carlo simulation - Dart throw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "699d0528",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Monte Carlo simulation - Dart throw\n",
+    "import random as random\n",
+    "import math as math\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "# number of darts to throw\n",
+    "num_darts = 5000\n",
+    "# count of darts inside the circle\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
