--- a/code_alongs/05_control_structures/for_statements.ipynb
+++ b/code_alongs/05_control_structures/for_statements.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "aa67762f",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_christoffer_carlsson_DE25 (3.12.10)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
