--- a/code_alongs/07_strings/strings.ipynb
+++ b/code_alongs/07_strings/strings.ipynb
@@ -9,6 +9,261 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "470af8a0",
+   "metadata": {},
+   "source": [
+    "##### class code along\n",
+    "- we have just created and printed out string type variable in lecture 4\n",
+    "- this lecture is more about strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b995410d",
+   "metadata": {},
+   "source": [
+    "## Concatenate strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d42a5ad8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'kokchun giang'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# concatenate multiple strings with + operator\n",
+    "# remember + operator has another meaning when it comes to numeric variables\n",
+    "\n",
+    "first_name = \"kokchun\"\n",
+    "last_name = \"giang\"\n",
+    "\n",
+    "full_name = first_name + \" \" + last_name\n",
+    "full_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2ecbc1f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kokchun giang is working in a company called Algineer AB. And his adress is Supah cool streeeeeeeeeeeto.\n",
+      "kokchun giang is working in a company called Algineer AB.\n",
+      "And his adress is Supah cool streeeeeeeeeeeto.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# multiline f-string for concatenating many strings\n",
+    "work = \"Algineer AB\"\n",
+    "adress = \"Supah cool streeeeeeeeeeeto\"\n",
+    "\n",
+    "# f-string with one line\n",
+    "print(f\"{full_name} is working in a company called {work}. And his adress is {adress}.\")\n",
+    "\n",
+    "# f-string with multiple\n",
+    "print(f\"\"\"{full_name} is working in a company called {work}.\n",
+    "And his adress is {adress}.\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8212cf69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#Today's fruits: apple orange strawberry \n",
+      "apple\n",
+      "orange\n",
+      "strawberry\n"
+     ]
+    }
+   ],
+   "source": [
+    "# concatenate with loop\n",
+    "\n",
+    "fruits_today = \"apple \" + \"orange \" + \"strawberry \"\n",
+    "\n",
+    "print(f\"#Today's fruits: {fruits_today}\")\n",
+    "\n",
+    "fruits_today_list = [\"apple\", \"orange\", \"strawberry\"]\n",
+    "for fruit in fruits_today_list:\n",
+    "    print(fruit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fbbaec4",
+   "metadata": {},
+   "source": [
+    "## Indexing\n",
+    "- an operation to access \"an item\"\n",
+    "- what is an item in the context of string? it is one of the characters inside the string\n",
+    "- we can use[] operator for indexing\n",
+    "- slicing is also possible if we want to access multiple characters\n",
+    "- we can use : for slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6d9a514d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kokchun giang\n",
+      "The first letter of the string is: k\n",
+      "The last letter is: g\n"
+     ]
+    }
+   ],
+   "source": [
+    "# index\n",
+    "print(full_name)\n",
+    "print(f\"The first letter of the string is: {full_name[0]}\")\n",
+    "print(f\"The last letter is: {full_name[12]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "eb9b61cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first three letters are: kok\n",
+      "The last three letters are: gna\n"
+     ]
+    }
+   ],
+   "source": [
+    "# slicing\n",
+    "print(f\"The first three letters are: {full_name[0:3]}\")\n",
+    "\n",
+    "# slicing reversely\n",
+    "print(f\"The last three letters are: {full_name[-1:-4:-1]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "367b2fb7",
+   "metadata": {},
+   "source": [
+    "## Some common examples to clean strings\n",
+    "- make use of string methods\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "050339b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Math', ' biology   ', ' cHeMistry ', ' Pr0gramming    ']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# splitting a sting¨\n",
+    "subjects = \"Math, biology   , cHeMistry , Pr0gramming    \"\n",
+    "\n",
+    "subjects = subjects.split(\",\")\n",
+    "\n",
+    "subjects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "db4203bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Math\n",
+      "biology\n",
+      "cHeMistry\n",
+      "Pr0gramming\n"
+     ]
+    }
+   ],
+   "source": [
+    "# strip off leading and trailing space\n",
+    "# check out also rstrip() and lstrip()\n",
+    "for subject in subjects:\n",
+    "    print(subject.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "cd61c95b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MATH\n",
+      "BIOLOGY\n",
+      "CHEMISTRY\n",
+      "PR0GRAMMING\n"
+     ]
+    }
+   ],
+   "source": [
+    "# making upper case letters\n",
+    "# check out lower()\n",
+    "for subject in subjects:\n",
+    "    print(subject.strip(). upper())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f50f6d8",
+   "metadata": {},
+   "source": [
+    "##### Video code along"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "22446631",
@@ -391,7 +646,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_christoffer_carlsson_DE25 (3.12.10)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
