färdiga med 07_strings

--- a/code_alongs/07_strings/strings.ipynb
+++ b/code_alongs/07_strings/strings.ipynb
@@ -257,6 +257,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "68f89379",
+   "metadata": {},
+   "source": [
+    "## Regular expression\n",
+    "- look for pattern\n",
+    "- make use of differente functions in re package\n",
+    "- syntax of using functions from an imported package\n",
+    "    - re.findall()\n",
+    "    - imported_package.function\n",
+    "- check out the w3schools re tutorial to learn more symbols to form patterns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "04e8c79f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "442c97a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista med alla 'att': ['katt', 'hatt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"det var en gång en katt som tog på sig en hatt.\"\n",
+    "\n",
+    "list_letter_att = re.findall(\".att\", text)\n",
+    "print(f\"Lista med alla 'att': {list_letter_att}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1f50f6d8",
    "metadata": {},
    "source": [
