--- a/code_alongs/04_input_output/input_output.ipynb
+++ b/code_alongs/04_input_output/input_output.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2bdd9760",
    "metadata": {},
    "outputs": [
@@ -23,12 +23,12 @@
     }
    ],
    "source": [
-    "print(\"Hello, World!\")"
+    "print(\"Hello, World!\") # most common test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4b4915d4",
    "metadata": {},
    "outputs": [
@@ -41,12 +41,12 @@
     }
    ],
    "source": [
-    "print(\"My name is Christoffer Carlsson.\")"
+    "print(\"My name is Christoffer Carlsson.\") # my name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "51691113",
    "metadata": {},
    "outputs": [
@@ -59,13 +59,13 @@
     }
    ],
    "source": [
-    "name = \"Anna\"\n",
-    "print(f\"your name is {name}\")"
+    "name = \"Anna\" \n",
+    "print(f\"your name is {name}\") # trying f-string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "98429410",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python_christoffer_carlsson_DE25 (3.12.10)",
    "language": "python",
    "name": "python3"
   },
