--- a/code_alongs/05_control_structures/for_statements.ipynb
+++ b/code_alongs/05_control_structures/for_statements.ipynb
@@ -242,7 +242,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python_christoffer_carlsson_DE25 (3.12.10)",
    "language": "python",
    "name": "python3"
   },
