några övningar i exercise 4

--- a/exercises/Exercise_04.ipynb
+++ b/exercises/Exercise_04.ipynb
@@ -41,9 +41,192 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e8d6451",
+   "metadata": {},
+   "source": [
+    "##### Counting letters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e8d6451",
+   "id": "e93c502e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antalet bokstäver i ordet är 7.\n",
+      "Antalet stora bokstäver i ordet är 1.\n",
+      "Antalet små bokstäver i ordet är 6.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# counting letters\n",
+    "word = input(\"Type a word of your choice: \") # be användaren att skriva in ett ord\n",
+    "number_of_letters = len(word) # len() hjälper dig att räkna antalet bokstäver i ordet\n",
+    "uppercase = 0\n",
+    "lowercase = 0\n",
+    "\n",
+    "for letter in word:\n",
+    "    if letter.isupper():\n",
+    "        uppercase += 1\n",
+    "    elif letter.islower():\n",
+    "        lowercase += 1\n",
+    "\n",
+    "print(f\"Antalet bokstäver i ordet är {number_of_letters}.\")\n",
+    "print(f\"Antalet stora bokstäver i ordet är {uppercase}.\")\n",
+    "print(f\"Antalet små bokstäver i ordet är {lowercase}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56f68f06",
+   "metadata": {},
+   "source": [
+    "##### Palindrome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "321cad3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Texten är inte ett palindrom\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = input(\"Vänligen skriv in en text. Vi ska undersöka om det är ett palindrom\") # be användaren om ett ord\n",
+    "\n",
+    "clean_text = text.replace(\" \", \"\").lower() # ta bort mellanrum och gör alla bokstäver till små\n",
+    "\n",
+    "if clean_text == clean_text[::-1]: # ::-1 vänder på texten\n",
+    "    print(\"Texten är ett palindrom\")\n",
+    "else:\n",
+    "    print(\"Texten är inte ett palindrom\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9f38efb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antal vokaler i meningen är:  22\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Pure mathematics is, in its way, the poetry of logical ideas\" # texten som skall genomsökas efter vokaler\n",
+    "vowels = \"aeiouyåäö\"\n",
+    "text = text.lower()\n",
+    "\n",
+    "count = 0\n",
+    "for letter in text:\n",
+    "    if letter in vowels:\n",
+    "        count += 1\n",
+    "print(\"Antal vokaler i meningen är: \", count)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9a97d92",
+   "metadata": {},
+   "source": [
+    "##### find and fix errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c94532a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def distance(x, y):\n",
+    "    return np.sqrt(x + y)\n",
+    "\n",
+    "print(distance(0.5, 0.5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9567a889",
+   "metadata": {},
+   "source": [
+    "##### find and fix errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "37bf089d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "231 is not four-digit\n",
+      "3124 is four-digit\n",
+      "-4124 is four-digit\n",
+      "-1000 is four-digit\n",
+      "-999 is not four-digit\n",
+      "1001 is four-digit\n",
+      "10000 is not four-digit\n",
+      "-10000 is not four-digit\n",
+      "999 is not four-digit\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_fourdigit(number):\n",
+    "    number = abs(number)    \n",
+    "    if number >= 1000 and number <= 9999:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "# test program\n",
+    "test_numbers = [231, 3124, -4124, -1000,-999, 1001, 10000, -10000, 999]\n",
+    "\n",
+    "for number in test_numbers:\n",
+    "    if is_fourdigit(number):\n",
+    "        print(f\"{number} is four-digit\")\n",
+    "    else:\n",
+    "        print(f\"{number} is not four-digit\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a5836d0",
    "metadata": {},
    "outputs": [],
    "source": []
