--- a/code_alongs/07_strings/strings.ipynb
+++ b/code_alongs/07_strings/strings.ipynb
@@ -691,7 +691,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python_christoffer_carlsson_DE25 (3.12.10)",
    "language": "python",
    "name": "python3"
   },
