--- a/exercises/Exercise_04.ipynb
+++ b/exercises/Exercise_04.ipynb
@@ -224,12 +224,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8096d1c9",
+   "metadata": {},
+   "source": [
+    "##### Tram - write a program that will calculate if the monthly fee is worth the investment instead of one ticket at a time"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "0a5836d0",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Resultat ---\n",
+      "Totalkostnad med biljetter: 814.00 kr\n",
+      "Kostnad för månadskort: 600.00 kr\n",
+      "OBS! Det är billigare att köpa månadskort!\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        #fråga användaren om hur många resor som är förväntade under en månad\n",
+    "        trips = int(input(\"Hur många gånger vill du åka spårvagn denna månad? \"))\n",
+    "\n",
+    "        #fråga om biljettpris när man köper dem en åt gången\n",
+    "        ticket_price = float(input(\"Vad kostar en biljett åt gången? \"))\n",
+    "\n",
+    "        # fråga vad månadskortet kostar\n",
+    "        monthly_card = float(input(\"Vad kostar ett månadskort? \"))\n",
+    "\n",
+    "        # om while-loopen kommit hit utan fel så avsluta den här.\n",
+    "        break\n",
+    "\n",
+    "    except ValueError:\n",
+    "        print(\"Fel! Skriv bara siffror (1, 23, 499 osv.). Försök igen.\\n\")\n",
+    "    \n",
+    "    # räkna totalkostnad\n",
+    "\n",
+    "total_ticket_cost = trips * ticket_price\n",
+    "\n",
+    "    # jämför och skriv ut resultat\n",
+    "print(\"\\n--- Resultat ---\")\n",
+    "print(f\"Totalkostnad med biljetter: {total_ticket_cost:.2f} kr\")\n",
+    "print(f\"Kostnad för månadskort: {monthly_card:.2f} kr\")\n",
+    "\n",
+    "if total_ticket_cost > monthly_card:\n",
+    "    print(\"OBS! Det är billigare att köpa månadskort!\")\n",
+    "else:\n",
+    "    print(\"OBS! Det är billigare att köpa biljetter styckvis!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53f179f4",
+   "metadata": {},
+   "source": [
+    "##### Dice rolls - text file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5aae5e57",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random as rnd\n",
+    "\n",
+    "dice_rolls = [random.randint(1, 6) for _ in range(20)]\n",
+    "\n",
+    "sorted_rolls = sorted(dice_rolls)\n",
+    "\n",
+    "fours_count = dice_rolls.count(4)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
