--- a/exercises/python_glossary.ipynb
+++ b/exercises/python_glossary.ipynb
@@ -72,12 +72,36 @@
     "- zip - kopplar ihop två eller flera sekvenser till par. T.ex. att man sätter ihop namn och ålder från olika sekvenser\n",
     "- enumerate - ger dig både index och värde när du går igenom en sekvens.\n",
     "- unpacking - betyder att man plockar isär en sekvens i flera variabler\n",
-    "- membership test - man testar om något finns i en sekvens med in\n"
+    "- membership test - används i Python för att kontrollera om ett värde finns i (eller inte finns i) en samling — till exempel en lista, sträng, tuple, set eller dictionary."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6b07b63a",
+   "metadata": {},
+   "source": [
+    "## Exercise 4\n",
+    "- replace - en metod som byter ut en text i en sträng. T.ex. \"hej\".replace(\"j\", \"ll\") → \"hell\"\n",
+    "- regular expression (regex) - Ett mönster man använder för att söka, matcha eller ändra text på avancerade sätt. Ex: re.search(r\"\\d+\", \"abc123\") hittar siffrorna 123\n",
+    "- concatenation - Att \"slå ihop\" strängar. Ex: \"Hej\" + \" \" + \"där\" → \"Hej där\"\n",
+    "- split - Delar upp en sträng i en lista baserat på mellanslag eller annat tecken. Ex: \"hej då\".split() → [\"hej\", \"då\"]\n",
+    "- indexing - Att komma åt ett specifikt element i en lista eller sträng. Ex: \"hej\"[1] → \"e\"\n",
+    "- escape characters - Specialtecken som börjar med \\ för att t.ex. skriva radbrytningar eller citattecken. Ex: \\n (ny rad), \\\" (citattecken).\n",
+    "- unicode - Ett system för att representera tecken från alla språk. Ex: \"\\u2764\" → ❤️\n",
+    "- exception - Ett fel som inträffar när programmet körs. Ex: ValueError, ZeroDivisionError\n",
+    "- try block - Kod som kan ge fel, som Python försöker köra. try: x = int(\"hej\")\n",
+    "- except block - Kod som körs om ett fel inträffar i try-blocket. Ex: except ValueError: print(\"Fel!\")\n",
+    "- finally block - Kod som alltid körs — oavsett om fel inträffade eller inte. Ex: finally: print(\"Klar!\")\n",
+    "- traceback - Felmeddelandet som visar var i koden ett fel inträffade.\n",
+    "- open() - Används för att öppna en fil (för läsning eller skrivning). Ex: open(\"fil.txt\", \"r\")\n",
+    "- with - Ett sätt att öppna filer säkert – stänger filen automatiskt. Ex: with open(\"fil.txt\") as f: data = f.read()\n",
+    "- context manager - Objekt (som filer) som används med with och hanterar att öppna/stänga resurser.\n",
+    "- close() Stänger en fil som öppnats med open(). Ex: f = open(\"fil.txt\") f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cebd1706",
    "metadata": {},
    "source": []
   }
