--- a/exercises/Exercise_04.ipynb
+++ b/exercises/Exercise_04.ipynb
@@ -292,20 +292,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "5aae5e57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random as rnd\n",
+    "import random\n",
     "\n",
     "dice_rolls = [random.randint(1, 6) for _ in range(20)]\n",
     "\n",
     "sorted_rolls = sorted(dice_rolls)\n",
     "\n",
     "fours_count = dice_rolls.count(4)\n",
-    "\n"
+    "\n",
+    "with open(\"dice_rolls.txt\", \"w\") as file:\n",
+    "    file.write(\"a) Original dice rolls:\\n\")\n",
+    "    file.write(\" \".join(str(num) for num in dice_rolls) + \"\\n\\n\")\n",
+    "\n",
+    "    file.write(\"b) Sorted dice rolls:\\n\")\n",
+    "    file.write(\" \".join(str(num) for num in sorted_rolls) + \"\\n\\n\")\n",
+    "\n",
+    "    file.write(\"c) Number of fours:\\n\")\n",
+    "    file.write(str(fours_count) + \"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21b32c3a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
